<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Matkakortti Widget is licensed under GPLv2.
  ~ See LICENSE.txt for more information.
  -->

<resources>
    <string name="app_name">Matkakortti Widget</string>

    <!-- About dialog -->
    <string name="settings_aboutDialog_title">Tietoa Matkakortti Widgetistä</string>

    <!-- Settings -->
    <string name="settings_accInfo_category">Tunnuksen tiedot</string>
    <string name="settings_accInfo_username">Käyttäjätunnus</string>
    <string name="settings_accInfo_password">Salasana</string>
    <string name="settings_accInfo_registerLink_title">Rekisteröidy Oma Matkakortti-palveluun</string>
    <string name="settings_accInfo_registerLink_summary"></string>

    <string name="settings_cardList_category">Tunnuksella olevat matkakortit</string>
    <string name="settings_cardList_loading">Ladataan...</string>
    <string name="settings_cardList_card_hasMoney">Arvoa %1$s &#x20ac;,</string>
    <string name="settings_cardList_card_noPeriod">ei kautta.</string>
    <string name="settings_cardList_card_hasPeriod">kautta %1$s asti.</string>

    <string name="settings_widgetPrefs_category">Widgetin ulkonäkö</string>
    <string name="settings_widgetPrefs_showName_title">Näytä matkakortin nimi</string>
    <string name="settings_widgetPrefs_autoHideMoney">Hide cash if period</string>
    <string name="settings_widgetPrefs_autoHidePeriod_title">Piilota kausi tarvittaessa</string>
    <string name="settings_widgetPrefs_autoHidePeriod_summary">Kautta ei näytetä jos kortilla ei ole kautta</string>

    <string name="settings_infoCategory">Lisätietoja</string>
    <string name="settings_infoCategory_showAboutDialog">Lisätietoa Matkakortti Widgetistä</string>

    <!-- Error messages -->
    <string name="settings_errors_errorDialog_title">Virhe</string>
    <string name="settings_errors_connectionError">Virhe Internet-yhteydessä palveluun yhdistettäessä.</string>
    <string name="settings_errors_apiErrorPrefix"><!-- Empty for now --></string>
    <string name="settings_errors_unexpectedError">Tapahtui odottamaton virhe.</string>
    <string name="settings_errors_accountHasNoCards">Tunnukselle ei ole lisätty yhtään matkakorttia.</string>

    <!-- Widget -->
    <string name="widget_loading">Ladataan&#8230;</string>
    <string name="widget_connection_error">Yhteys-&#10;virhe</string>
    <string name="widget_other_error">Tapahtui virhe.</string>

</resources>
