<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="prefs">
    <PreferenceCategory
        android:title="@string/settings_accInfo_category">
        <EditTextPreference
                android:title="@string/settings_accInfo_username"
                android:key="username"
                android:singleLine="true"
                android:inputType="textVisiblePassword|textNoSuggestions"/>
        <EditTextPreference
                android:title="@string/settings_accInfo_password"
                android:key="password"
                android:singleLine="true"
                android:inputType="textPassword" />
        <Preference
            android:key="registerLink"
            android:title="@string/settings_accInfo_registerLink_title"
            android:summary="@string/settings_accInfo_registerLink_summary"/>
    </PreferenceCategory>
    <!-- The 'OK' button is added in a bit hacky way, test that scrolling still works -->
    <!--
        <Preference android:title="Filler"/>
        <Preference android:title="Filler"/>
        <Preference android:title="Filler"/>
        <Preference android:title="Filler"/>
        <Preference android:title="Filler"/>
        <Preference android:title="Filler"/>
        <Preference android:title="Filler"/>
    -->
    <PreferenceCategory
            android:key="cardList"
            android:title="@string/settings_cardList_category">
    </PreferenceCategory>
    <PreferenceCategory
        android:key="widgetPrefs"
        android:title="@string/settings_widgetPrefs_category">

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_infoCategory">
        <Preference android:title="@string/settings_infoCategory_showAboutDialog">
            <intent
                android:action="fi.iki.dezgeg.matkakorttiwidget.SHOW_ABOUT_DIALOG"
                android:targetPackage="fi.iki.dezgeg.matkakorttiwidget"
                android:targetClass="fi.iki.dezgeg.matkakorttiwidget.gui.AboutAppActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
